section 2 and 3 added

--- a/style.css
+++ b/style.css
@@ -4,12 +4,16 @@ body {
     box-sizing: border-box;
 }
 .main-wrap {width: 100%;}
-.wrap { width: 960px; margin: 0 auto;}
-.color1 {color: yellowgreen;}
+.wrap { width: 1128px; margin: 0 auto;}
+.color1 {color: green;}
 .flex {
     display: flex;
     justify-content: space-between;
 }
+/* p {
+    font-size: 18px;
+    line-height: 28px;
+} */
 /***** header css *****/
 header {margin-top: 100px;}
 .header-content {
@@ -20,7 +24,7 @@ header {margin-top: 100px;}
     width: 4px;
     height: 120px;
     float: left;
-    background-color: yellowgreen;
+    background-color: green;
     margin-right: 10px;
     margin-top: 60px;
     border-radius: 50px;
@@ -32,7 +36,7 @@ header {margin-top: 100px;}
     line-height: 80px;
     /* border-left: yellowgreen 4px solid; */
 }
-.header-content p {
+.header-content p, p {
     font-size: 18px;
     line-height: 28px;
 }
@@ -41,7 +45,7 @@ header img {
     margin-top: -100px;
     float: right;
 }
-.header-content button {
+button {
     padding: 12px 37.5px;
     background-color: green;
     color: white;
@@ -59,9 +63,35 @@ header img {
     height: 376px;
     padding: 25px 13px 45px 32px;
     border-radius: 26px;
+    margin-bottom: 86px;
 }
 .card img {
     width: 126px;
     height: 126px;
 }
-.card1 {background-color: rgba(79, 157, 166, 0.1);;}
+.card1 {background-color: rgba(79, 157, 166, 0.1);}
+.card2 {
+    background-color: rgba(255, 89, 89, 0.1);
+    margin: 0 24px;
+}
+.card3 {background-color: #FFF4D6;}
+
+/* ***** section 2 & 3 ***** */
+.section2 img {
+    width: 400px;
+    height: 400px;
+    margin-bottom: 100px;
+}
+.section2-content {
+    width: 654px;
+    height: 311px;
+    margin: 30px 0;
+}
+.section2-content h2 {
+    font-size: 36px;
+    line-height: 54px;
+}
+.section2-content p {
+    font-size: 18px;
+    line-height: 30px;
+}
