--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 .main-wrap {width: 100%;}
 .wrap { width: 1128px; margin: 0 auto;}
@@ -17,16 +18,16 @@ body {
 /***** header css *****/
 header {margin-top: 100px;}
 .header-content {
-    width: 450px;
+    width: 500px;
 }
 
 .border-left {
     width: 4px;
-    height: 120px;
+    height: 124px;
     float: left;
     background-color: green;
     margin-right: 10px;
-    margin-top: 60px;
+    margin-top: 57px;
     border-radius: 50px;
     
 }
@@ -34,7 +35,7 @@ header {margin-top: 100px;}
     font-size: 60px;
     font-weight: normal;
     line-height: 80px;
-    /* border-left: yellowgreen 4px solid; */
+    font-family: 'Yeseva One', cursive;
 }
 .header-content p, p {
     font-size: 18px;
@@ -141,6 +142,7 @@ footer {
     color: white;
 }
 footer h3 {
+    font-family: 'Lobster', cursive;
     font-size: 36px;
     line-height: 24px;
     letter-spacing: 0.5px;
